testdata/baselines/reference/submodule/conformance/moduleExportAssignment7.errors.txt
index.ts(2,15): error TS2306: File 'mod.js' is not a module.
index.ts(3,15): error TS2306: File 'mod.js' is not a module.
index.ts(4,15): error TS2306: File 'mod.js' is not a module.
index.ts(5,15): error TS2306: File 'mod.js' is not a module.
index.ts(6,15): error TS2306: File 'mod.js' is not a module.
index.ts(7,15): error TS2306: File 'mod.js' is not a module.
index.ts(8,15): error TS2306: File 'mod.js' is not a module.
index.ts(14,22): error TS2306: File 'mod.js' is not a module.
index.ts(15,22): error TS2306: File 'mod.js' is not a module.
index.ts(16,22): error TS2306: File 'mod.js' is not a module.
index.ts(17,22): error TS2306: File 'mod.js' is not a module.
index.ts(18,22): error TS2306: File 'mod.js' is not a module.
index.ts(19,22): error TS2306: File 'mod.js' is not a module.
index.ts(20,22): error TS2306: File 'mod.js' is not a module.
mod.js(6,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== mod.js (1 errors) ====
    class Thing  { x = 1 }
    class AnotherThing { y = 2  }
    function foo() { return 3 }
    function bar() { return 4 }
    /** @typedef {() => number} buz */
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        Thing,
        AnotherThing,
        foo,
        qux: bar,
        baz() { return 5 },
        literal: "",
    }
==== main.js (0 errors) ====
    /**
     * @param {import("./mod").Thing} a
     * @param {import("./mod").AnotherThing} b
     * @param {import("./mod").foo} c
     * @param {import("./mod").qux} d
     * @param {import("./mod").baz} e
     * @param {import("./mod").buz} f
     * @param {import("./mod").literal} g
     */
    function jstypes(a, b, c, d, e, f, g) {
        return a.x + b.y + c() + d() + e() + f() + g.length
    }
    
    /**
     * @param {typeof import("./mod").Thing} a
     * @param {typeof import("./mod").AnotherThing} b
     * @param {typeof import("./mod").foo} c
     * @param {typeof import("./mod").qux} d
     * @param {typeof import("./mod").baz} e
     * @param {typeof import("./mod").buz} f
     * @param {typeof import("./mod").literal} g
     */
    function jsvalues(a, b, c, d, e, f, g) {
        return a.length + b.length + c() + d() + e() + f() + g.length
    }
    
==== index.ts (14 errors) ====
    function types(
        a: import('./mod').Thing,
                  ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        b: import('./mod').AnotherThing,
                  ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        c: import('./mod').foo,
                  ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        d: import('./mod').qux,
                  ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        e: import('./mod').baz,
                  ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        f: import('./mod').buz,
                  ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        g: import('./mod').literal,
                  ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
    ) {
        return a.x + b.y + c() + d() + e() + f() + g.length
    }
    
    function values(
        a: typeof import('./mod').Thing,
                         ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        b: typeof import('./mod').AnotherThing,
                         ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        c: typeof import('./mod').foo,
                         ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        d: typeof import('./mod').qux,
                         ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        e: typeof import('./mod').baz,
                         ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        f: typeof import('./mod').buz,
                         ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
        g: typeof import('./mod').literal,
                         ~~~~~~~
!!! error TS2306: File 'mod.js' is not a module.
    ) {
        return a.length + b.length + c() + d() + e() + f() + g.length
    }
    